--- a/QLKTX/.classpath
+++ b/QLKTX/.classpath
@@ -8,7 +8,7 @@
 	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="D:/eclipse/ProjectCK/ProjectCK/jakarta.servlet-api-5.0.0.jar">
+	<classpathentry kind="lib" path="E:/Downloads/jakarta.servlet-api-5.0.0.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
