feat: quanlyphong_backend

--- a/QLKTX/src/main/webapp/WEB-INF/web.xml
+++ b/QLKTX/src/main/webapp/WEB-INF/web.xml
@@ -19,4 +19,24 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  <servlet>
+    <description></description>
+    <display-name>CheckLoginServlet</display-name>
+    <servlet-name>CheckLoginServlet</servlet-name>
+    <servlet-class>controller.CheckLoginServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>CheckLoginServlet</servlet-name>
+    <url-pattern>/CheckLoginServlet</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>RoomController</display-name>
+    <servlet-name>RoomController</servlet-name>
+    <servlet-class>controller.RoomController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>RoomController</servlet-name>
+    <url-pattern>/RoomController</url-pattern>
+  </servlet-mapping>
 </web-app>
