feat: delete room, show user, add user, show contract of user

--- a/QLKTX/src/main/webapp/WEB-INF/web.xml
+++ b/QLKTX/src/main/webapp/WEB-INF/web.xml
@@ -39,4 +39,14 @@
     <servlet-name>RoomController</servlet-name>
     <url-pattern>/RoomController</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>UserController</display-name>
+    <servlet-name>UserController</servlet-name>
+    <servlet-class>controller.UserController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>UserController</servlet-name>
+    <url-pattern>/UserController</url-pattern>
+  </servlet-mapping>
 </web-app>
